fixing container spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,10 +10,10 @@ body {
 
 #container {
     margin:0 auto;
-    margin-top:50px;
-    max-width:800px;
     box-sizing: border-box;
     padding:20px;
+    margin-bottom:0px;
+/*    margin-top:50px;*/
 }
 
 h1 {
@@ -65,6 +65,7 @@ h1, h2, h3 {
 
 .navigation {
     position:absolute;
+    top:400px;
     color:#000;
     height:50px;
     background:#000;
@@ -90,10 +91,9 @@ h1, h2, h3 {
     width:100%;
 }
 
-.desc {
+.maincont {
     max-width:800px;
-    margin:auto;
-    padding:0 20px;
+    margin-top:0px;;
 }
 
 #icons {
@@ -144,8 +144,13 @@ h2 {
     color:#888;
 }
 
+.projcont {
+    width:1600px;
+    margin-top:-50px;
+}
+
 #project {
-    width:calc((100% - 80px) / 2);
+    width:calc((100% - 160px) / 4);
     display:inline-block;
     text-align:center;
     box-sizing: border-box;
@@ -167,6 +172,16 @@ h2 {
 
 #navcards .card-title {
     text-shadow: .5px .5px .2px #000;
+}
+
+@media screen and (max-width: 1600px) {
+    .projcont {
+        width:800px;
+    }
+
+    #project {
+        width:calc((800px - 80px) / 2);
+    }
 }
 
 #button {
